--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "fluent-ffmpeg": "^2.1.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "passport": "^0.6.0",
