--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcryptjs": "^2.4.4",
     "@types/passport-jwt": "^3.0.10",
+    "archiver": "^6.0.1",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -39,6 +40,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "fluent-ffmpeg": "^2.1.2",
+    "form-data": "^4.0.0",
+    "jwt-redis": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "passport": "^0.6.0",
