--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^16.3.1",
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
+    "fs-extra": "^11.2.0",
     "jwt-redis": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
