fix bug show path image

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "srt-to-obj": "^0.0.3",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
