--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -7,10 +7,13 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: temppwd1234
       MYSQL_DATABASE: back_lip
+    restart: unless-stopped
     ports:
       - "3306:3306"
     expose:
       - '3306'
+    volumes:
+      - "/home/diplab/Desktop/Lip_reading_Project_Web/pooh/db:/var/lib/mysql"
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
